Add new "#p#" placeholder for editor whose version is being reverted to; available in both revert and AGF fields.

--- a/gui_menus/stiki_help.html
+++ b/gui_menus/stiki_help.html
@@ -187,6 +187,7 @@ Use of the panel is intuitive. Further, 'placeholders' allow more personalized c
 
   <BR><TABLE ALIGN="LEFT" WIDTH="100%" CELLSPACING="15"><TR><TD>
     <LI><B>#u#</B> - User (guilty) who made the edit being reverted.
+    <LI><B>#p#</B> - User whose previous version is being reverted back to.
     <LI><B>#a#</B> - Article on which the offending edit was placed.
 		<LI><B>#q#</B> - Quantity of edits that will be reverted.
 		<LI><B>#s#</B> - Plurality switch. Returns "s" if #q# > 1; "" otherwise.
